--- a/outro/index.html
+++ b/outro/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   	<meta charset="UTF-8">
-  	<meta name="viewport" content="width=device-width",initial-scale="1">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<title>키보드란 무엇일까?</title>
   	<link rel="stylesheet" href="css/bootstrap.css">
   	<link rel="stylesheet" href="css/stylesheet.css">
