--- a/outro/index.html
+++ b/outro/index.html
@@ -8,71 +8,71 @@
   	<link rel="stylesheet" href="css/stylesheet.css">
   </head>
   <body>
-  	  <!-- <style type="text/css">
+  	    <style type="text/css">
   	   	  .jumbotron{
-  	   	  	  background-image: url('images/jumbotronBackground.jpg');
+  	   	  	  background-image: url('images/pretty.png');
   	   	  	  background-size: cover;
   	   	  	  text-shadow: black 0.2em 0.2em 0.2em;
   	   	  	  color: white;
-  	   	  } -->
+  	   	  } 
   	   	</style>
   	   	<nav class="navbar navbar-default">
-  	   		<div class="container-fluid">
-  	   			<div class="navbar-header">
-  	   				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-  	   				    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-  	   				    <span class="sr-only"></span>
-  	   				    <span class="icon-bar"></span>
-  	   				    <span class="icon-bar"></span>
-  	   				    <span class="icon-bar"></span>
-  	   		        </button>
-  	   		        <a class="navbar-brand" href="index.html">keyboard</a>
-  	   		    </div>
-  	   		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-  	   		    	<ul class="nav navbar-nav">
-  	   		    		<li class="dropdown">
-  	   		    	    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button"
-  	   		    			    aria-haspopup="true" aria-expanded="false">소개<span class="caret"></span></a>
-  	   		    			<ul class="dropdown-menu">
-  	   		    				<li><a href="lecture.html">키보드</a></li>
-  	   		    				<li><a href="lecture2.html">스위치</a></li>
-  	   		    				<li><a href="lecture3.html">스테빌라이저</a></li>
-                      <li><a href="lecture4.html">키캡</a></li>
-                      <li><a href="lecture5.html">보강판</a></li>
-                      <li><a href="lecture6.html">하우징</a></li>
-
-  	   		    	        </ul>
-  	   		            </li>
-  	   		            </li>
-  	   		    		<li class="active"><a href="http://www.kongson.kro.kr/index.html">인트로<span class="sr-only"></span></a></li>
-                  <li><a href="lecture.html">키보드 강의</a></li>
-                  <li><a href="made.html">제작 과정</a></li>
-  	   		    		<li><a href="instructor.html">콩손이란 누구인가?</a></li>
-  	   		        </ul>
-  	   		    <ul class="nav navbar-nav navbar-right">
-  	   		    	<li class="dropdown">
-  	   		    		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-  	   		    			    aria-haspopup="true" aria-expanded="false">접속하기<span class="caret"></span></a>
-  	   		    			    <ul class="dropdown-menu">
-  	   		    			    	<li><a href="loginform.html">로그인</a></li>
-  	   		    			    	<li><a href="registerform.html">회원가입</a></li>
-  	   		    			    </ul>
-  	   		    	</li>
-  	   	        </ul>
-  	   	          <form class="navbar-form navbar-right">
-  	   		    	<div class="form-group">
-  	   		    		<input type="text" class="form-control" placeholder="내용을 입력하세요.">
-  	   		    	</div>
-  	   		    	<button type="submit" class="btn btn-default">검색</button>
-  	   		    </form>
-  	   	        </div>
-  	   	    </div>
-        </nav>
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="index.html">keyboard</a>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="index4.html">커스텀 키보드 견적</a></li>
+						<li class="dropdown">
+						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button"
+								aria-haspopup="true" aria-expanded="false">소개<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="lecture.html">키보드</a></li>
+								<li><a href="lecture2.html">스위치</a></li>
+								<li><a href="lecture3.html">스테빌라이저</a></li>
+						        <li><a href="lecture4.html">키캡</a></li>
+						        <li><a href="lecture5.html">보강판</a></li>
+						        <li><a href="lecture6.html">하우징</a></li>
+		                    </ul>
+						</li>
+						</li>
+						<li class="active"><a href="http://www.kongson.kro.kr/index.html">인트로<span class="sr-only"></span></a></li>
+			 <li><a href="lecture.html">키보드 강의</a></li>
+			 <li><a href="made.html">제작 과정</a></li>
+						
+					</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+								aria-haspopup="true" aria-expanded="false">접속하기<span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="loginform.html">로그인</a></li>
+									<li><a href="registerform.html">회원가입</a></li>
+								</ul>
+					</li>
+				</ul>
+				  <form class="navbar-form navbar-right">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="내용을 입력하세요.">
+					</div>
+					<button type="submit" class="btn btn-default">검색</button>
+				</form>
+				</div>
+			</div>
+		</nav>
     
         <div class="container">
        	   <div class="jumbotron">
        	   	 <h1 class="text-center">keyboard을 소개합니다.</h1>
-       	   	 <!-- <p class="text-center">키보드는 단순한 입력 도구가 아닙니다</p>
+       	   	 <!-- <p class="text-center">키보드는 단순한 입력 도구가 아닙니다</p> 
        	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="https://heroesofthestorm.com/ko-kr/" role="button">시공의 폭풍 속으로</a></p> -->
        	   	</div>
 
